--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -27,7 +27,7 @@
         <div class="card-body">
           <a href="/rock-scissors-paper" class="card-link">Play Game</a>
           <a href="/profile/update" class="card-link">Update Profile</a><br>
-          <a href="/profile/logout" class="card-link">Logout</a>
+          <a href="/logout" class="card-link">Logout</a>
         </div>
       </div>
       </div>
